--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ margin:0;
 padding:0;
 width:100%;
 height:100%;
-background-image:url('./question.jpg');
+background-image:url('https://www.dhresource.com/0x0s/f2-albu-g3-M00-F1-70-rBVaHVSv75-AeppOAAaQTMblXTE043.jpg/vinyl-custom-photography-backdrops-brick.jpg');
 }
 .wrapper{
 position:relative;
-top:50px;
+top:90px;
 
 }
 h3{
@@ -66,8 +66,10 @@ margin: 10px 10px;
 }
 img{
 max-height: 300px;
-max-width: 300px;
+max-width: 600px;
 height:200px;
-width:200px;
+width:300px;
 border-radius: 10px;
+position:relative;
+right:16px;
 }
